--- a/Authentication/tsconfig.json
+++ b/Authentication/tsconfig.json
@@ -6,7 +6,9 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
+
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
