fix(docker): fixed docker compose, added wait-for-it.sh and entrypoint.sh for waiting for the postgres and rabbitmq containers to be fully up when the app wants to connect to them, updated package.json, fixed Container name and refactored all

--- a/TaskManagement/src/app/Ship/Configs/Sequelize/config.json
+++ b/TaskManagement/src/app/Ship/Configs/Sequelize/config.json
@@ -4,7 +4,10 @@
     "dialect": "postgres",
     "username": "user",
     "password": "password",
-    "host": "127.0.0.1",
+    "host": "postgres",
+    "define":{
+      "underscored":true
+    },
     "timezone": "+03:30"
   }
 }
