fix(docker): fixed docker compose, added wait-for-it.sh and entrypoint.sh for waiting for the postgres and rabbitmq containers to be fully up when the app wants to connect to them, updated package.json

--- a/Authentication/package.json
+++ b/Authentication/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node src/app.ts",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "migrate": "npx sequelize-cli db:migrate --migrations-path src/app/Containers/Authentication/Migrations/ --config src/app/Ship/Configs/Sequelize/config.json",
     "migrate:down": "npx sequelize-cli db:migrate:undo --migrations-path src/app/Containers/Authentication/Migrations/ --config src/app/Ship/Configs/Sequelize/config.json",
@@ -37,6 +37,7 @@
     "redis": "^4.6.15",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.1"
   }
