--- a/Authentication/src/app/Ship/Configs/Sequelize/config.json
+++ b/Authentication/src/app/Ship/Configs/Sequelize/config.json
@@ -4,6 +4,10 @@
     "dialect": "postgres",
     "username": "user",
     "password": "password",
-    "host": "127.0.0.1"
+    "host": "postgres",
+    "timezone": "+03:30",
+    "define":{
+      "underscored":true
+    }
   }
 }
